// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe cVhXWo"
      disabled={true}
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          disabled={true}
          placeholder=" "
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ZTjWy"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF fuitrZ"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF hSExwn"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE eyGbhX"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder=" "
          readOnly={true}
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF izyiDj"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        medium
      </label>
      <input
        className="sc-oTTbF fDoAiu"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
        dir="rtl"
      >
        large
      </label>
      <input
        className="sc-oTTbF bDHIyR"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF jcoRGz"
          dir="rtl"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL dUFjbR"
        >
          xlarge
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF ieBiDU"
        placeholder="medium"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <input
        className="sc-oTTbF izyiDj"
        placeholder="large"
        type="datetime-local"
      />
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK kuIlyc"
      >
        <input
          className="sc-oTTbF iDUbgU"
          placeholder="xlarge"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        medium
      </label>
      <input
        className="sc-oTTbF lmKnNf"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <label
        className="sc-fqEDVf rOOsh"
      >
        large
      </label>
      <input
        className="sc-oTTbF bUpZmE"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4 w-52"
  >
    <div
      className="sc-imZoBe ivtqle"
    >
      <div
        className="sc-iKKmqK fQvxgz"
      >
        <input
          className="sc-oTTbF kIfQWV"
          placeholder="Placeholder"
          type="datetime-local"
        />
        <label
          className="sc-fOpBKL hWiPKu"
        >
          xlarge
        </label>
      </div>
      <p
        className="sc-dloDHE cUFjLb"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
